--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Hello World!</h1>
   <p>Checkout this Octocat!</p>
   <div>
-    <img src="{{ site.baseurl }}/images/gobbleotron.gif" />
+    <img src="https://pelangovan24.github.io/images/gobbleotron.gif" />
   </div>
   <p>And here's Millhouse!</p>
     <img src="/images/simpsons/millhouse-1.JPG" />
